# fast-api-naive-orm-tests

./: README.md  TESTING.md  main.py  pyproject.toml  pyproject.toml.example
docs/: 00_setup.md
src/: conftest.py  main.py
src/tests/unit/dao/: test_example_dao.py
src/tests/unit/services/: test_easy.py
