[project]
name = "fast-api-naive-orm-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "alembic-postgresql-enum>=1.7.0",
    "fastapi>=0.115.12",
    "psycopg>=3.2.9",
    "pydantic>=2.11.4",
    "pydantic-ai[logfire]>=0.2.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-dotenv>=0.5.2",
    "sqlalchemy[asyncio]>=2.0.41",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "src/alembic",
]


[tool.ruff.isort]
known-first-party = ["src"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = true
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["src"]
ignore = ["**/typings"]
exclude = [
    ".*",
    "__*",
    "**/typings",
]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src/tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
addopts = "-ra -q"
log_cli = true
log_cli_level = "INFO"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
env_files = [".env"]
